# chanism-blog

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  package-lock.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
migrations/: init.down.sql  init.up.sql
src/: app.rs  lib.rs  main.rs  setup.rs
src/app/api/: email.rs
src/app/components/: about.rs  contact.rs  experience.rs  footer.rs  header.rs  intro.rs  link.rs  mod.rs  project.rs  projects.rs  section_divisor.rs  section_heading.rs  skills.rs  submit_btn.rs  test.rs  theme_switch.rs  vertical_timeline.rs  vertical_timeline_element.rs
src/app/context/: active_section_context.rs  mod.rs  theme_context.rs
src/app/hooks/: mod.rs
src/app/lib/: data.rs  hooks.rs  mod.rs  utils.rs
src/app/pages/: home.rs  mod.rs  post_detail.rs
src/app/pages/post/: list.rs  mod.rs  write.rs
src/app/pages/profile/: about.rs  contact.rs  experience.rs  index.rs  intro.rs  mod.rs  pfooter.rs  pheader.rs  project.rs  projects.rs  section_divisor.rs  section_heading.rs  skills.rs  submit_btn.rs
style/: tailwind.css
